codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__slash_command_popup_dismissed.snap
---
source: tui/src/bottom_pane/mod.rs
assertion_line: 3066
expression: "render_snapshot(&pane, area)"
---
                                                            
› /rev                                                      
                                                            
  ⠋ Working (0s • esc to interrupt)      100% context left
