codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__status_and_composer_fill_height_without_bottom_padding.snap
---
source: tui/src/bottom_pane/mod.rs
assertion_line: 2771
expression: "render_snapshot(&pane, area)"
---
                              
› Ask Codex to do anything    
                              
  ⠋ esc i… 100% context left
